<resources>
    <string name="app_name">Proyecto</string>

    <string name="action_settings">Settings</string>

    <string name="dialog_header">Mensaje</string>


    <string name="home_item">Home</string>
    <string name="productos_item">Productos</string>
    <string name="compras_item">Carrito</string>
    <string name="ordenes_item">Ordenes</string>
    <string name="facturas_item">Facturas</string>
    <string name="log_out_item">Cerrar Sesión</string>
    <string name="configuracion_item">Configuración</string>

    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="correo">Correo</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="telefono">Telefono</string>
    <string name="direccion">Dirección</string>

    <string name="title_activity_carrito">Carrito de Productos</string>
    <string name="title_activity_pedidos">PedidosActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_pedido">PedidoActivity</string>
</resources>
